--- a/package.json
+++ b/package.json
@@ -1,33 +1,10 @@
 {
-  "_from": "github:olympum/ble-cycling-power",
-  "_id": "ble-cycling-power@0.0.1",
-  "_inBundle": false,
-  "_integrity": "sha1-OOQN1ie9kSv1D0X7TGBeJEaqBME=",
-  "_location": "/ble-cycling-power",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "git",
-    "raw": "ble-cycling-power@github:olympum/ble-cycling-power",
-    "name": "ble-cycling-power",
-    "escapedName": "ble-cycling-power",
-    "rawSpec": "github:olympum/ble-cycling-power",
-    "saveSpec": "github:olympum/ble-cycling-power",
-    "fetchSpec": null,
-    "gitCommittish": "master"
-  },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "github:olympum/ble-cycling-power#37ba8f8deef7e2adb4515f9b1a288d361f1081ce",
-  "_spec": "ble-cycling-power@github:olympum/ble-cycling-power",
-  "_where": "/home/pi/Desktop/waterrower/waterrower-ble",
   "author": {
-    "name": "Bruno Fernandez-Ruiz"
+    "name": "Wade Cobb"
   },
   "bugs": {
-    "url": "https://github.com/olympum/ble-cycling-power/issues"
+    "url": "https://github.com/nedatacorp/ble-spinbike/issues"
   },
-  "bundleDependencies": false,
   "dependencies": {
     "bleno": "^0.5.0",
     "onoff": "^3.2.2",
@@ -35,8 +12,8 @@
     "stepper-wiringpi": "0.0.2"
   },
   "deprecated": false,
-  "description": "A Virtual Bluetooth 4.0 Low Energy Cycling Power",
-  "homepage": "https://github.com/olympum/ble-cycling-power#readme",
+  "description": "A  bluetooth SpinBike",
+  "homepage": "https://github.com/olympum/nedatacorp/ble-spinbike#readme",
   "keywords": [
     "bluetooth",
     "cycling",
@@ -45,11 +22,11 @@
     "sensor"
   ],
   "license": "MIT",
-  "main": "bluetooth-peripheral.js",
-  "name": "ble-cycling-power",
+  "main": "spinbike.js",
+  "name": "ble-spinbike",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/olympum/ble-cycling-power.git"
+    "url": "git+ssh://git@github.com/nedatacorp/ble-spinbike.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
